# spcli

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  sp.py
.github/: CODEOWNERS
.github/workflows/: install_spcli.yml  package.yml  pip_install.yml  publish-to-pypi.yml  publish-to-test-pypi-test.yml  publish-to-test-pypi.yml
lib/: BaseConnection.py  __init__.py  appliance.py  bgp.py  parser.py
spcli/: sp.py
spcli/lib/: __init__.py  appliance.py  bgp.py  flows.py  orch.py  ospf.py  parser.py  qos.py
