[project]
name = "pyspcli"
version = "0.0.7"
authors = [
    {name = "Lazaro Mas", email="kentik.hanzo94@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7, <4"

keywords = ["packaging", "dependency", "infer", "pyproject.toml"]

classifiers = [
    "Topic :: Software Development"
]

# Requirements: This is done differently by poetry!
dependencies = [
    "pyedgeconnect",
    "PyYAML==6.0",
    "tabulate==0.8.10",
    "importlib_metadata"
]

[project.optional-dependencies]
dev = [
    "black>=18.3-alpha.0",
]

[project.urls]
homepage = "https://github.com/ipHeaders/spcli"
repository = "https://github.com/ipHeaders/spcli"

[project.scripts]
poetry = "infer_pyproject.cli:main"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''