[metadata]
description = Silverpeak SD-WAN Command Line Interface
long_description = file: README.md
author = IP Headers.llc
author_email = kentik.hanzo94@gmail.com
url = https://github.com/ipHeaders/spcli
project_urls =
    Bug Tracker=https://github.com/ipHeaders/spcli/issues
    Code of Conduct=https://github.com/ipHeaders/spcli/blob/main/CODE_OF_CONDUCT.md
    Source Code=https://github.com/ipHeaders/spcli
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
